Create swagger documentation
