# docs/swagger.yaml
@@ -315,6 +315,38 @@ definitions:
     - new_password
     - re_password
     type: object
+  response.CategorySimpleResponse:
+    properties:
+      category:
+        type: string
+      id:
+        type: integer
+    type: object
+  response.Product:
+    properties:
+      brand_id:
+        type: integer
+      category_id:
+        type: integer
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      image_url:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      size:
+        items:
+          type: string
+        type: array
+      updated_at:
+        type: string
+    type: object
   response.User:
     properties:
       created_at:
@@ -648,6 +680,90 @@ paths:
       summary: put Details
       tags:
       - address
+  /auth/facebook:
+    get:
+      consumes:
+      - application/json
+      description: this endpoint is only used to generate redirect URL to facebook
+        login dialog.
+      produces:
+      - application/json
+      responses:
+        "307":
+          description: Redirecting...
+          schema:
+            type: string
+        "405":
+          description: Method Not Allowed
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      summary: Facebook login oauth
+      tags:
+      - facebookauth
+  /auth/facebook/callback:
+    get:
+      consumes:
+      - application/json
+      description: This endpoint is a callback endpoint for facebook login or sign
+        up.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  additionalProperties:
+                    type: string
+                  type: object
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "403":
+          description: Forbidden
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+        "405":
+          description: Method Not Allowed
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      summary: Facebook callback endpoint when login success.
+      tags:
+      - facebookauth
   /auth/forget-password:
     post:
       consumes:
@@ -906,6 +1022,352 @@ paths:
       summary: Verify Email For User
       tags:
       - auth
+  /category:
+    post:
+      consumes:
+      - application/json
+      description: It creates a new Category record.
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  $ref: '#/definitions/response.CategorySimpleResponse'
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      security:
+      - JWT: []
+      summary: Create new category
+      tags:
+      - category
+    put:
+      consumes:
+      - application/json
+      description: It updates the category's name. It updates the category that has
+        the given ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  $ref: '#/definitions/response.CategorySimpleResponse'
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      security:
+      - JWT: []
+      summary: Update the category's name based on the given id.
+      tags:
+      - category
+  /category/:id:
+    delete:
+      consumes:
+      - application/json
+      description: Delete category by id
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  type: string
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      security:
+      - JWT: []
+      summary: Delete category by id
+      tags:
+      - category
+    get:
+      consumes:
+      - application/json
+      description: Get category by its id
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  $ref: '#/definitions/response.CategorySimpleResponse'
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      security:
+      - JWT: []
+      summary: Get category by id
+      tags:
+      - category
+  /category/all:
+    get:
+      consumes:
+      - application/json
+      description: Get all category
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  items:
+                    $ref: '#/definitions/response.CategorySimpleResponse'
+                  type: array
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      security:
+      - JWT: []
+      summary: Get All Category
+      tags:
+      - category
+  /category/search:
+    get:
+      consumes:
+      - application/json
+      description: It returns a list of categories. This is not an exact match searching
+        method.
+      parameters:
+      - description: Category name
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  items:
+                    $ref: '#/definitions/response.CategorySimpleResponse'
+                  type: array
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      security:
+      - JWT: []
+      summary: Find category by its name
+      tags:
+      - category
   /login:
     post:
       consumes:
@@ -967,6 +1429,63 @@ paths:
       summary: Login
       tags:
       - auth
+  /products/brand:
+    get:
+      consumes:
+      - application/json
+      description: It returns a list of products of a brand
+      parameters:
+      - description: Brand name
+        in: query
+        name: name
+        required: true
+        type: string
+      - description: limit for pagination
+        in: query
+        name: limit
+        type: integer
+      - description: offset for pagination
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: string
+                data:
+                  items:
+                    $ref: '#/definitions/response.Product'
+                  type: array
+                isError:
+                  type: boolean
+                status:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                code:
+                  type: integer
+                description:
+                  type: string
+                isError:
+                  type: boolean
+              type: object
+      security:
+      - JWT: []
+      summary: Find product by brand
+      tags:
+      - product
   /register:
     post:
       consumes:
