# internal/handler/category/post_category.go
@@ -4,17 +4,27 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/phincon-backend/laza/domain/request"
 	"github.com/phincon-backend/laza/helper"
-	"log"
 	"net/http"
 )
 
+// PostCategory godoc
+// @Summary Create new category
+// @Description It creates a new Category record.
+// @Tags category
+// @Accept json
+// @Produce json
+// @Security JWT
+// @Success 201 {object} helper.Response{code=string,isError=bool,status=string,data=response.CategorySimpleResponse}
+// @Failure 500 {object} helper.Response{code=int,description=string,isError=bool}
+// @Failure 400 {object} helper.Response{code=int,description=string,isError=bool}
+// @Router /category [post]
 func (ch *categoryHandler) postCategory(c *gin.Context) {
 	var categoryRequest request.CategoryRequest
 	if err := c.ShouldBindJSON(&categoryRequest); err != nil {
 		helper.GetResponse(err.Error(), http.StatusBadRequest, true).Send(c)
 		return
 	}
-	log.Println(categoryRequest)
+
 	result, err := ch.createCategoryUsecase.Execute(categoryRequest)
 	if err != nil {
 		helper.GetResponse(err.Error(), http.StatusInternalServerError, true).Send(c)
