# internal/handler/category/update_name_by_id.go
@@ -9,6 +9,17 @@ import (
 	"net/http"
 )
 
+// UpdateCategoryNameById godoc
+// @Summary Update the category's name based on the given id.
+// @Description It updates the category's name. It updates the category that has the given ID.
+// @Tags category
+// @Accept json
+// @Produce json
+// @Security JWT
+// @Success 200 {object} helper.Response{code=string,isError=bool,status=string,data=response.CategorySimpleResponse}
+// @Failure 500 {object} helper.Response{code=int,description=string,isError=bool}
+// @Failure 404 {object} helper.Response{code=int,description=string,isError=bool}
+// @Router /category [put]
 func (ch *categoryHandler) updateNameById(c *gin.Context) {
 	var categoryRequest request.CategoryRequest
 
